--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,9 +1,9 @@
 name = "luxuryrideservice"
 type = "javascript"
-account_id = "9daf554a647e8485085e1bfe6244c8a3"
+account_id = "ACCOUNT_ID"
 workers_dev = true
 route = "*.luxuryrideservice.com/"
-zone_id = "14577cec19038e2f63ce7d7d1e4b4668"
+zone_id = "ZONE_ID"
 compatibility_date = "2022-01-28"
 
 [site]
