--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "extends": "./.nuxt/tsconfig.json",
   "allowJS": true,
-  "compilerOptions": {}
+  "compilerOptions": {},
+  "include": ["src/**/*"]
 }
