--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
+  "name": "luxury-ride-service",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "yarn develop",
-    "develop": "nuxi dev",
+    "dev": "nuxi dev",
     "build": "nuxi build",
     "start": "nuxi preview",
     "publish": "wrangler publish"
   },
   "devDependencies": {
-    "@headlessui/vue": "^1.4.3",
-    "@iconify/json": "^2.0.34",
+    "@headlessui/vue": "^1.5.0",
+    "@iconify/json": "^2.1.3",
     "@pinia/nuxt": "^0.1.8",
     "@splidejs/vue-splide": "^0.5.18",
-    "@vueuse/nuxt": "^7.5.5",
-    "nuxt-windicss": "^2.2.4",
+    "@vueuse/nuxt": "^7.6.2",
+    "nuxt-windicss": "^2.2.5",
     "nuxt3": "latest",
-    "@unocss/nuxt": "^0.24.0",
+    "@unocss/nuxt": "^0.25.0",
     "prettier": "^2.5.1"
   },
   "dependencies": {
