Fix: Slide out menu

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "./.nuxt/tsconfig.json",
-  "allowJS": true,
-  "compilerOptions": {},
+
+  "compilerOptions": {
+    "allowJS": true
+  },
 
 }
