--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "luxury-ride-service",
-  "version": "1.0.0",
+  "version": "1.0.1",
+  "description": "Luxury Ride Service",
+  "author": "David Robertson",
+  "license": "MIT",
   "private": true,
   "scripts": {
     "dev": "nuxi dev",
@@ -10,16 +13,17 @@
   },
   "devDependencies": {
     "@headlessui/vue": "^1.5.0",
-    "@iconify/json": "^2.1.13",
+    "@iconify/json": "^2.1.15",
     "@pinia/nuxt": "^0.1.8",
     "@splidejs/vue-splide": "^0.5.18",
-    "@unocss/nuxt": "^0.27.5",
-    "@vueuse/nuxt": "^7.7.1",
+    "@unocss/nuxt": "^0.28.1",
+    "@vueuse/core": "^8.0.1",
+    "@vueuse/nuxt": "^8.0.1",
     "nuxt-windicss": "^2.2.8",
     "nuxt3": "latest",
     "prettier": "^2.5.1"
   },
   "dependencies": {
-    "pinia": "^2.0.11"
+    "pinia": "^2.0.12"
   }
 }
