--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
   },
   "devDependencies": {
     "@headlessui/vue": "^1.5.0",
-    "@iconify/json": "^2.1.15",
+    "@iconify/json": "^2.1.23",
     "@pinia/nuxt": "^0.1.8",
     "@splidejs/vue-splide": "^0.5.18",
-    "@unocss/nuxt": "^0.28.1",
-    "@vueuse/core": "^8.0.1",
-    "@vueuse/nuxt": "^8.0.1",
+    "@unocss/nuxt": "^0.30.11",
+    "@vueuse/core": "^8.2.3",
+    "@vueuse/nuxt": "^8.2.3",
     "nuxt-windicss": "^2.2.8",
-    "nuxt3": "latest",
-    "prettier": "^2.5.1"
+    "nuxt3": "^3.0.0-27480376.fdd38f9",
+    "prettier": "^2.6.2"
   },
   "dependencies": {
-    "pinia": "^2.0.12"
+    "pinia": "^2.0.13"
   }
 }
