--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@headlessui/vue": "^1.5.0",
     "@iconify/json": "^2.1.23",
+    "@nuxt/types": "^2.15.8",
     "@pinia/nuxt": "^0.1.8",
     "@splidejs/vue-splide": "^0.5.18",
     "@unocss/nuxt": "^0.30.11",
