--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "./.nuxt/tsconfig.json",
 
   "compilerOptions": {
-    "allowJS": true
+    "allowJS": true,
+    "types": [ "@nuxt/types"]
   },
 
 }
