--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@headlessui/vue": "^1.5.0",
     "@iconify/json": "^2.1.24",
+    "@nuxt/test-utils-edge": "^3.0.0-27486226.7a70644",
     "@nuxt/types": "^2.15.8",
     "@pinia/nuxt": "^0.1.8",
     "@splidejs/vue-splide": "^0.6.2",
@@ -22,7 +23,8 @@
     "@vueuse/nuxt": "^8.2.4",
     "nuxt-windicss": "^2.2.8",
     "nuxt3": "^3.0.0-27486226.7a70644",
-    "prettier": "^2.6.2"
+    "prettier": "^2.6.2",
+    "vitest": "^0.8.4"
   },
   "dependencies": {
     "pinia": "^2.0.13"
