--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "./.nuxt/tsconfig.json",
 
   "compilerOptions": {
-    "allowJS": true,
+    "allowJs": true,
     "types": [ "@nuxt/types"]
   },
 
