Chore: update deps

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@unocss/reset": "^0.31.0",
     "@vueuse/core": "^8.2.5",
     "@vueuse/nuxt": "^8.2.5",
-    "nuxt3": "3.0.0-27491748.3186841",
+    "nuxt3": "^3.0.0-27495135.4d1a6ba",
     "prettier": "^2.6.2",
     "vitest": "^0.9.3"
   },
