--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@pinia/nuxt": "^0.1.8",
     "@splidejs/vue-splide": "^0.6.3",
     "@unocss/nuxt": "^0.31.0",
-    "@unocss/reset": "^0.31.0",
+    "@unocss/reset": "~0.31.0",
     "@vueuse/core": "^8.2.5",
     "@vueuse/nuxt": "^8.2.5",
     "nuxt3": "^3.0.0-27495135.4d1a6ba",
