--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@microsoft/microsoft-graph-types": "^2.19.0",
     "@nuxt/test-utils-edge": "^3.0.0-27497942.c519cee",
     "@nuxt/types": "^2.15.8",
-    "@pinia/nuxt": "^0.1.8",
     "@splidejs/vue-splide": "^0.6.3",
     "@testing-library/vue": "^6.5.1",
     "@unocss/nuxt": "^0.31.2",
@@ -28,10 +27,9 @@
     "@vueuse/nuxt": "^8.2.5",
     "nuxt3": "^3.0.0-27497942.c519cee",
     "prettier": "^2.6.2",
-    "vitest": "^0.9.3",
-    "@formkit/nuxt": "^1.0.0-beta.6"
+    "vitest": "^0.9.3"
   },
   "dependencies": {
-    "pinia": "^2.0.13"
+    "@formkit/nuxt": "^1.0.0-beta.6"
   }
 }
