--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "nuxi dev",
     "build": "nuxi build",
     "start": "nuxi preview",
+    "generate": "nuxi generate",
     "publish": "wrangler publish",
     "test": "vitest"
   },
