--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "high-park-livery",
+  "name": "high_park_livery",
   "version": "0.0.1",
   "description": "High Park Livery Website",
   "author": "David Robertson",
@@ -16,23 +16,19 @@
   "devDependencies": {
     "@headlessui/vue": "^1.5.0",
     "@iconify/json": "^2.1.15",
-    "@pinia/nuxt": "^0.1.8",
     "@splidejs/vue-splide": "^0.5.18",
     "@types/node": "^17.0.21",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
     "@unocss/nuxt": "^0.28.1",
-    "@vueuse/core": "^8.0.1",
+    "@unocss/reset": "^0.31.3",
     "@vueuse/nuxt": "^8.0.1",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-vue": "^8.5.0",
-    "nuxt-windicss": "^2.2.8",
-    "nuxt3": "^3.0.0-27454426.4cefce4",
+    "nuxt3": "^3.0.0-27500677.83d27bd",
     "prettier": "^2.5.1",
     "typescript": "^4.6.2"
   },
-  "dependencies": {
-    "pinia": "^2.0.12"
-  }
+  "dependencies": {}
 }
