--- a/package.json
+++ b/package.json
@@ -25,12 +25,10 @@
     "@unocss/nuxt": "^0.31.12",
     "@unocss/reset": "^0.31.12",
     "@vitejs/plugin-vue": "^2.3.1",
-    "@vueuse/nuxt": "^8.3.0",
+    "@vueuse/nuxt": "^8.3.1",
     "nuxt": "^3.0.0-rc.1",
     "prettier": "^2.6.2",
-    "vitest": "^0.9.3"
-  },
-  "dependencies": {
+    "vitest": "^0.9.4",
     "@formkit/nuxt": "^1.0.0-beta.6"
   }
 }
