--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@unocss/reset": "^0.31.13",
     "@vitejs/plugin-vue": "^2.3.1",
     "@vueuse/nuxt": "^8.3.1",
-    "nuxt": "^3.0.0-rc.1",
+    "nuxt": "npm:nuxt3@latest",
     "prettier": "^2.6.2",
     "vitest": "^0.9.4",
     "vue-gtag-next": "^1.14.0"
