--- a/package.json
+++ b/package.json
@@ -7,28 +7,28 @@
   "license": "MIT",
   "homepage": "https://luxuryrideservice.com",
   "scripts": {
-    "dev": "nuxi dev",
-    "build": "nuxi build",
-    "start": "nuxi preview",
-    "generate": "nuxi generate",
+    "dev": "nuxt dev",
+    "build": "nuxt build && npx wrangler publish",
+    "start": "nuxt preview",
+    "generate": "nuxt generate",
     "publish": "wrangler publish",
     "test": "vitest"
   },
   "devDependencies": {
     "@formkit/nuxt": "^1.0.0-beta.6",
-    "@headlessui/vue": "^1.5.0",
-    "@iconify/json": "^2.1.31",
-    "@nuxt/test-utils-edge": "^3.0.0-rc.1-27510703.46ecbc5",
+    "@headlessui/vue": "^1.6.1",
+    "@iconify/json": "^2.1.39",
+    "@nuxt/test-utils-edge": "^3.0.0-rc.2-27530889.9e5a3cd",
     "@nuxt/types": "^2.15.8",
     "@splidejs/vue-splide": "^0.6.3",
     "@testing-library/vue": "^6.5.1",
-    "@unocss/nuxt": "^0.31.13",
-    "@unocss/reset": "^0.31.13",
-    "@vitejs/plugin-vue": "^2.3.1",
-    "@vueuse/nuxt": "^8.3.1",
-    "nuxt": "npm:nuxt3@latest",
+    "@unocss/nuxt": "^0.33.2",
+    "@unocss/reset": "^0.33.2",
+    "@vitejs/plugin-vue": "^2.3.2",
+    "@vueuse/nuxt": "^8.4.2",
+    "nuxt": "^3.0.0-rc.2",
     "prettier": "^2.6.2",
-    "vitest": "^0.9.4",
+    "vitest": "^0.12.0",
     "vue-gtag-next": "^1.14.0"
   }
 }
