Remove: vue-gtag

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
 
   "compilerOptions": {
     "allowJs": true,
-    "types": ["@nuxt/types", "@microsoft/microsoft-graph-types"],
+    "types": ["@nuxt/types"],
 
   }
 }
