--- a/package.json
+++ b/package.json
@@ -15,20 +15,24 @@
     "test": "vitest"
   },
   "devDependencies": {
-    "@formkit/nuxt": "^1.0.0-beta.6",
+    "@babel/core": "^7.17.10",
+    "@formkit/nuxt": "^1.0.0-beta.8",
     "@headlessui/vue": "^1.6.1",
-    "@iconify/json": "^2.1.39",
-    "@nuxt/test-utils-edge": "^3.0.0-rc.2-27530889.9e5a3cd",
+    "@iconify/json": "^2.1.43",
+    "@nuxt/test-utils-edge": "^3.0.0-rc.3-27540667.2886dfd",
     "@nuxt/types": "^2.15.8",
     "@splidejs/vue-splide": "^0.6.3",
     "@testing-library/vue": "^6.5.1",
-    "@unocss/nuxt": "^0.33.2",
-    "@unocss/reset": "^0.33.2",
-    "@vitejs/plugin-vue": "^2.3.2",
+    "@unocss/nuxt": "^0.33.4",
+    "@unocss/reset": "^0.33.4",
+    "@vitejs/plugin-vue": "^2.3.3",
     "@vueuse/nuxt": "^8.4.2",
-    "nuxt": "^3.0.0-rc.2",
+    "babel-loader": "^8.2.5",
+    "jsdom": "^19.0.0",
+    "nuxt": "npm:nuxt3@latest",
     "prettier": "^2.6.2",
-    "vitest": "^0.12.0",
-    "vue-gtag-next": "^1.14.0"
-  }
+    "vitest": "^0.12.6",
+    "vue-loader": "^17.0.0"
+  },
+  "dependencies": {}
 }
