--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
+    "@cloudflare/workers-types": "^3.10.0",
     "@formkit/nuxt": "^1.0.0-beta.8",
     "@headlessui/vue": "^1.6.1",
     "@iconify/json": "^2.1.43",
@@ -32,7 +33,8 @@
     "nuxt": "npm:nuxt3@latest",
     "prettier": "^2.6.2",
     "vitest": "^0.12.6",
-    "vue-loader": "^17.0.0"
+    "vue-loader": "^17.0.0",
+    "wrangler": "2.0.5"
   },
   "dependencies": {}
 }
