--- a/package.json
+++ b/package.json
@@ -8,33 +8,31 @@
   "homepage": "https://luxuryrideservice.com",
   "scripts": {
     "dev": "nuxt dev",
-    "build": "nuxt build && npx wrangler publish",
+    "build": "npx nuxi build && npx wrangler publish",
     "start": "nuxt preview",
     "generate": "nuxt generate",
     "publish": "wrangler publish",
-    "test": "vitest"
+    "test": "vitest",
+    "webstorm-integration": "vitest --watch --reporter=dot"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.10",
-    "@cloudflare/workers-types": "^3.10.0",
-    "@formkit/nuxt": "^1.0.0-beta.8",
-    "@headlessui/vue": "^1.6.1",
-    "@iconify/json": "^2.1.43",
-    "@nuxt/test-utils-edge": "^3.0.0-rc.3-27540667.2886dfd",
-    "@nuxt/types": "^2.15.8",
-    "@splidejs/vue-splide": "^0.6.3",
-    "@testing-library/vue": "^6.5.1",
-    "@unocss/nuxt": "^0.33.4",
-    "@unocss/reset": "^0.33.4",
-    "@vitejs/plugin-vue": "^2.3.3",
-    "@vueuse/nuxt": "^8.4.2",
-    "babel-loader": "^8.2.5",
-    "jsdom": "^19.0.0",
-    "nuxt": "npm:nuxt3@latest",
-    "prettier": "^2.6.2",
-    "vitest": "^0.12.6",
-    "vue-loader": "^17.0.0",
-    "wrangler": "2.0.5"
+    "@cloudflare/workers-types": "^3.16.0",
+    "@formkit/nuxt": "^1.0.0-beta.10",
+    "@headlessui/vue": "^1.6.7",
+    "@iconify/json": "^2.1.102",
+    "@nuxt/test-utils-edge": "^3.0.0-rc.10-27703516.b97cc27",
+    "@splidejs/vue-splide": "^0.6.7",
+    "@testing-library/vue": "^6.6.1",
+    "@unocss/nuxt": "^0.45.14",
+    "@unocss/reset": "^0.45.14",
+    "@vueuse/nuxt": "^9.1.1",
+    "jsdom": "^20.0.0",
+    "nuxt": "^3.0.0-rc.9",
+    "prettier": "^2.7.1",
+    "vitest": "^0.22.1",
+    "wrangler": "2.0.28"
   },
-  "dependencies": {}
+  "dependencies": {
+    "prisma": "^4.3.1"
+  }
 }
