--- a/package.json
+++ b/package.json
@@ -8,31 +8,37 @@
   "homepage": "https://luxuryrideservice.com",
   "scripts": {
     "dev": "nuxt dev",
-    "build": "npx nuxi build && npx wrangler publish",
+    "build": "npx nuxi build",
     "start": "nuxt preview",
     "generate": "nuxt generate",
     "publish": "wrangler publish",
     "test": "vitest",
-    "webstorm-integration": "vitest --watch --reporter=dot"
+    "webstorm-integration": "vitest --watch --reporter=dot",
+    "story:dev": "histoire dev",
+    "story:build": "histoire build",
+    "story:preview": "histoire preview"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.16.0",
-    "@formkit/nuxt": "^1.0.0-beta.10",
-    "@headlessui/vue": "^1.6.7",
-    "@iconify/json": "^2.1.102",
-    "@nuxt/test-utils-edge": "^3.0.0-rc.10-27703516.b97cc27",
-    "@splidejs/vue-splide": "^0.6.7",
+    "@headlessui/vue": "^1.7.1",
+    "@histoire/plugin-nuxt": "^0.10.7",
+    "@iconify/json": "^2.1.106",
+    "@nuxt/image-edge": "^1.0.0-27716498.4c23770",
+    "@nuxt/test-utils-edge": "^3.0.0-rc.10-27716896.3753ea0",
+    "@splidejs/vue-splide": "^0.6.10",
     "@testing-library/vue": "^6.6.1",
-    "@unocss/nuxt": "^0.45.14",
-    "@unocss/reset": "^0.45.14",
-    "@vueuse/nuxt": "^9.1.1",
+    "@unocss/nuxt": "^0.45.21",
+    "@unocss/reset": "^0.45.21",
+    "@vueuse/nuxt": "^9.2.0",
+    "add": "^2.0.6",
     "jsdom": "^20.0.0",
     "nuxt": "^3.0.0-rc.9",
     "prettier": "^2.7.1",
-    "vitest": "^0.22.1",
-    "wrangler": "2.0.28"
+    "vitest": "^0.23.2",
+    "wrangler": "^2.1.1"
   },
   "dependencies": {
+    "@formkit/nuxt": "^1.0.0-beta.11-1c50a05",
     "prisma": "^4.3.1"
   }
 }
