--- a/package.json
+++ b/package.json
@@ -20,18 +20,14 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.16.0",
-    "@formkit/icons": "^1.0.0-beta.11-c95e605",
-    "@formkit/nuxt": "next",
-    "@formkit/themes": "^1.0.0-beta.11-c95e605",
     "@googlemaps/js-api-loader": "^1.14.3",
     "@headlessui/tailwindcss": "^0.1.1",
     "@headlessui/vue": "^1.7.3",
     "@heroicons/vue": "^2.0.11",
-    "@histoire/plugin-nuxt": "^0.10.7",
-    "@iconify/json": "^2.1.115",
-    "@julr/unocss-preset-forms": "^0.0.2",
+    "@histoire/plugin-nuxt": "^0.11.0",
+    "@iconify/json": "^2.1.117",
     "@nuxt/image-edge": "^1.0.0-27719579.87dcdf2",
-    "@nuxt/test-utils-edge": "^3.0.0-rc.12-27736489.2e080c2",
+    "@nuxt/test-utils-edge": "^3.0.0-rc.12-27746784.92ff066",
     "@nuxtjs/tailwindcss": "^5.3.3",
     "@pinia/nuxt": "^0.4.2",
     "@splidejs/vue-splide": "^0.6.12",
@@ -40,15 +36,20 @@
     "@testing-library/vue": "^6.6.1",
     "@types/google.maps": "^3.50.2",
     "@types/vue-tel-input": "^2.1.2",
-    "@vuepic/vue-datepicker": "^3.4.8",
+    "@vuepic/vue-datepicker": "^3.5.0",
     "@vueuse/math": "^9.3.0",
     "@vueuse/nuxt": "^9.3.0",
-    "jsdom": "^20.0.0",
+    "jsdom": "^20.0.1",
     "nuxt": "npm:nuxt3@latest",
-    "nuxt-font-metrics": "^0.1.2",
+    "nuxt-font-metrics": "^0.2.0",
     "prettier": "^2.7.1",
     "vitest": "^0.23.4",
     "vue-tel-input": "^6.0.5",
-    "wrangler": "^2.1.9"
+    "wrangler": "^2.1.10"
+  },
+  "dependencies": {
+    "@formkit/icons": "latest",
+    "@formkit/nuxt": "latest",
+    "@formkit/themes": "latest"
   }
 }
