--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@headlessui/tailwindcss": "^0.1.1",
     "@headlessui/vue": "^1.7.3",
     "@heroicons/vue": "^2.0.12",
-    "@histoire/plugin-nuxt": "^0.11.0",
+    "@histoire/plugin-nuxt": "^0.11.2",
     "@iconify/json": "^2.1.118",
     "@nuxt/image-edge": "^1.0.0-27719579.87dcdf2",
     "@nuxt/test-utils-edge": "^3.0.0-rc.12-27746784.92ff066",
@@ -34,7 +34,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.7",
     "@testing-library/vue": "^6.6.1",
-    "@types/google.maps": "^3.50.2",
+    "@types/google.maps": "^3.50.3",
     "@types/vue-tel-input": "^2.1.2",
     "@vuepic/vue-datepicker": "^3.5.0",
     "@vueuse/math": "^9.3.0",
@@ -43,6 +43,7 @@
     "nuxt": "npm:nuxt3@latest",
     "nuxt-font-metrics": "^0.2.0",
     "prettier": "^2.7.1",
+    "prisma": "^4.4.0",
     "vitest": "^0.23.4",
     "vue-tel-input": "^6.0.5",
     "wrangler": "^2.1.10"
@@ -51,6 +52,7 @@
     "@formkit/icons": "latest",
     "@formkit/nuxt": "latest",
     "@formkit/pro": "^1.0.0-alpha.19",
-    "@formkit/themes": "latest"
+    "@formkit/themes": "latest",
+    "cypress": "^10.9.0"
   }
 }
