Improve: List box component

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "publish": "wrangler publish",
     "test": "vitest",
     "webstorm-integration": "vitest --watch --reporter=dot",
-    "story:dev": "histoire dev",
+    "story:dev": "nuxt prepare && histoire dev",
     "story:build": "histoire build",
     "story:preview": "histoire preview"
   },
@@ -25,18 +25,19 @@
     "@headlessui/vue": "^1.7.3",
     "@heroicons/vue": "^2.0.12",
     "@histoire/plugin-nuxt": "^0.11.2",
-    "@iconify/json": "^2.1.118",
+    "@iconify/json": "^2.1.119",
     "@nuxt/image-edge": "^1.0.0-27719579.87dcdf2",
-    "@nuxt/test-utils-edge": "^3.0.0-rc.12-27746784.92ff066",
-    "@nuxtjs/tailwindcss": "^5.3.3",
-    "@pinia/nuxt": "^0.4.2",
+    "@nuxt/test-utils-edge": "^3.0.0-rc.12-27753985.c404cb1",
+    "@nuxtjs/html-validator": "^1.0.0",
+    "@nuxtjs/tailwindcss": "^5.3.5",
+    "@pinia/nuxt": "^0.4.3",
     "@splidejs/vue-splide": "^0.6.12",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.7",
     "@testing-library/vue": "^6.6.1",
-    "@types/google.maps": "^3.50.3",
+    "@types/google.maps": "^3.50.4",
     "@types/vue-tel-input": "^2.1.2",
-    "@vuepic/vue-datepicker": "^3.5.0",
+    "@vuepic/vue-datepicker": "^3.5.1",
     "@vueuse/math": "^9.3.0",
     "@vueuse/nuxt": "^9.3.0",
     "jsdom": "^20.0.1",
@@ -44,15 +45,14 @@
     "nuxt-font-metrics": "^0.2.0",
     "prettier": "^2.7.1",
     "prisma": "^4.4.0",
-    "vitest": "^0.23.4",
+    "vee-validate": "^4.6.10",
+    "vitest": "^0.24.0",
     "vue-tel-input": "^6.0.5",
     "wrangler": "^2.1.10"
   },
   "dependencies": {
-    "@formkit/icons": "latest",
-    "@formkit/nuxt": "latest",
-    "@formkit/pro": "^1.0.0-alpha.19",
-    "@formkit/themes": "latest",
-    "cypress": "^10.9.0"
+    "@prisma/client": "4.4.0",
+    "@vee-validate/zod": "^4.6.10",
+    "zod": "^3.19.1"
   }
 }
